--- a/licenseplatereader/src/main/AndroidManifest.xml
+++ b/licenseplatereader/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.scrummers.loteye.licenseplatereader" />
+    package="co.scrummers.loteye.licenseplatereader" >
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
